# PowerCard

./: .gitignore  CMakeLists.txt  README.md
bootloader/: CMakeLists.txt
bootloader/Ld/: Link.ld
bootloader/Startup/: startup_CH583.S
bootloader/USB_LIB/: CH583UFI.c
bootloader/src/: Main.c  iap.c  iap.h  xmodem.c
firmware/: CMakeLists.txt
firmware/APP/: app_usb.c  peripheral.c  peripheral_main.c  power_card.c  power_card.h
firmware/APP/Profile/: ble_usb_service.c  gattprofile.c
firmware/APP/Profile/include/: ble_usb_service.h  gattprofile.h
firmware/APP/fusb/core/: PDPolicy.c  Port.c  Port.h  TypeC.c  platform.h  vendor_info.h
firmware/APP/fusb/core/modules/: dpm.c  dpm.h  observer.h
firmware/APP/fusb/core/vdm/: bitfield_translators.h  vdm.c  vdm.h  vdm_callbacks.c  vdm_types.h
firmware/APP/fusb/core/vdm/DisplayPort/: dp.c
firmware/APP/fusb/src/: main.c  platform.c
firmware/APP/include/: app_usb.h  peripheral.h
firmware/APP/menu/: .menu.c.swp  fb_draw.c  fb_draw.h  font.h  key.c  key.h  menu.c  menu.h  ssd1315.c  ssd1315.h
firmware/APP/utils/: avg.c  avg.h  env.c  env.h  fir.c  fir.h
firmware/Ld/: Link.ld
firmware/StdPeriphDriver/: CH58x_sys.c
firmware/StdPeriphDriver/inc/: CH58x_common.h
script/: flash_all.sh  iap_upgrade.sh
